Modificada la funcion showDatasetTitanic

--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/simuladorPython.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/simuladorPython.html
@@ -202,16 +202,14 @@
                     display(df.describe())
                     return df
 
-                def showTitanicSurvived(df) -> pd.DataFrame:
+                def showTitanicSurvived(df):
                     """ Generate the survived graphic of dataset titanic
                     :param df: Dataset
-                    :return df
                     """
                     sns.countplot( x='Survived', data=df)
                     plt.title('Titanic Class')
                     display(plt)
                     plt.clf()
-                    return df
 
                 def dropCols(df,cols) -> pd.DataFrame:
                     """ Delete columns from the dataset
@@ -319,6 +317,7 @@
                     sns.barplot(x=log.Accuracy, y=classifiers, data=log, color='b')
                     display(plt)
                     plt.clf()
+
                 
             </pre>
         </div>
@@ -399,16 +398,14 @@
                 display(df.describe())
                 return df
 
-            def showTitanicSurvived(df) -> pd.DataFrame:
+            def showTitanicSurvived(df):
                 """ Generate the survived graphic of dataset titanic
                 :param df: Dataset
-                :return df
                 """
                 sns.countplot( x='Survived', data=df)                    
                 plt.title('Titanic Class')
                 display(plt)
                 plt.clf()
-                return df
 
             def dropCols(df,cols) -> pd.DataFrame:
                 """ Delete columns from the dataset
@@ -536,7 +533,7 @@
         </p>
         <py-repl>
             # Analizamos el dataset titanic
-            titanic.pipe(showInfoDataset).pipe(describeDataset).pipe(showTitanicSurvived)
+            titanic.pipe(showInfoDataset).pipe(describeDataset)
         </py-repl>
         <py-repl >
             # Aplicamos el preprocesamiento de los datos del dataset titanic
@@ -545,18 +542,18 @@
         </py-repl>
         <py-repl>
             # Comprobamos si se ha realizado correctamente el preprocesamiento de los datos del dataset
-            titanic2.pipe(showDataset).pipe(showTitanicSurvived).pipe(showInfoDataset)
+            titanic2.pipe(showDataset).pipe(showInfoDataset)
         </py-repl>
         <!--Ejercicio 3-->
         <p>
             <em>Ejercicio 3: Aplica los siguientes algoritmos a cada dataset: Arbol de Decision, Arbol de decision aleatorio, KNN, SVC </em>
         </p>
         <py-repl >
-            # titanic train data
+            # Datos de entrenamiento del dataset titanic
             train_titanic = titanic2.drop(['Survived'], axis=1)
-            # titanic test data
+            # Datos de test del dataset titanic
             test_titanic = titanic2['Survived']
-            # Apply algorithms to dataset titanic
+            # Aplicamos algoritmos de mineria de datos para el dataset titanic
             Classifiers(train_titanic, test_titanic)
         </py-repl>
         <!--Ejercicio 4-->
@@ -564,7 +561,8 @@
             <em>Ejercicio 4: Utiliza la informacion obtenida en los ejercicios anteriores y saca conclusiones </em>
         </p>
         <py-repl >
-            
+            # Dataset titanic
+            titanic2.pipe(showTitanicSurvived)
         </py-repl>
 
     </div>
